[gd_scene load_steps=27 format=2]

[ext_resource path="res://Sprites/bearsum/hit1-upgraded.png" type="Texture" id=1]
[ext_resource path="res://Sprites/bearsum/hit3-upgraded.png" type="Texture" id=2]
[ext_resource path="res://Sprites/bearsum/hit2-upgraded.png" type="Texture" id=3]
[ext_resource path="res://Sprites/bearsum/walk1-upgraded.png" type="Texture" id=4]
[ext_resource path="res://Boss.gd" type="Script" id=5]
[ext_resource path="res://Sprites/bearsum/smash-straight3-upgraded.png" type="Texture" id=6]
[ext_resource path="res://Sprites/GUI/lifebar_bg.png" type="Texture" id=7]
[ext_resource path="res://Sprites/GUI/lifebar_fill.png" type="Texture" id=8]
[ext_resource path="res://Sprites/bearsum/smash-straight2-upgraded.png" type="Texture" id=9]
[ext_resource path="res://Sprites/bearsum/walk3-upgraded.png" type="Texture" id=10]
[ext_resource path="res://Sprites/bearsum/walk2-upgraded.png" type="Texture" id=11]
[ext_resource path="res://Sprites/bearsum/walk4-upgraded.png" type="Texture" id=12]
[ext_resource path="res://Sprites/bearsum/smash-straight1-upgraded.png" type="Texture" id=13]
[ext_resource path="res://Sprites/bearsum/static1-upgraded.png" type="Texture" id=14]
[ext_resource path="res://Sprites/bearsum/static2-upgraded.png" type="Texture" id=15]
[ext_resource path="res://Sprites/bearsum/roll2-upgraded.png" type="Texture" id=16]
[ext_resource path="res://Sprites/bearsum/roll1-upgraded.png" type="Texture" id=17]
[ext_resource path="res://Sprites/bearsum/alert1.png" type="Texture" id=18]
[ext_resource path="res://Sprites/bearsum/smash-up2-upgraded.png" type="Texture" id=19]
[ext_resource path="res://Sprites/bearsum/jump2-upgraded.png" type="Texture" id=20]
[ext_resource path="res://Sprites/bearsum/jump3-upgraded.png" type="Texture" id=21]
[ext_resource path="res://Sprites/bearsum/lightning2-upgraded.png" type="Texture" id=22]
[ext_resource path="res://Sprites/bearsum/lightning1-upgraded.png" type="Texture" id=23]
[ext_resource path="res://Sprites/bearsum/lightning3-upgraded.png" type="Texture" id=24]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ) ],
"loop": true,
"name": "idle",
"speed": 3.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": false,
"name": "alert",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "fall",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ), ExtResource( 20 ) ],
"loop": false,
"name": "jump",
"speed": 10.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 9 ), ExtResource( 6 ), ExtResource( 19 ) ],
"loop": true,
"name": "launch",
"speed": 10.0
}, {
"frames": [ ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "lightning",
"speed": 7.0
}, {
"frames": [ ExtResource( 13 ), ExtResource( 9 ), ExtResource( 6 ) ],
"loop": false,
"name": "shoot",
"speed": 10.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": false,
"name": "hit",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": false,
"name": "attack",
"speed": 10.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "dead",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ), ExtResource( 11 ), ExtResource( 10 ), ExtResource( 12 ) ],
"loop": true,
"name": "walk",
"speed": 8.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 18.3154
height = 23.9985

[node name="Boss" type="KinematicBody2D" groups=[
"boss",
"enemies",
]]
scale = Vector2( 2, 2 )
script = ExtResource( 5 )
__meta__ = {
"_edit_horizontal_guides_": [ 60.6092 ]
}
direction = -1
max_hp = 30

[node name="HPBar" type="TextureProgress" parent="."]
modulate = Color( 0.192157, 0.631373, 0.141176, 1 )
margin_left = -39.6421
margin_top = -40.6222
margin_right = 356.358
margin_bottom = 12.3778
rect_scale = Vector2( 0.2, 0.15 )
value = 100.0
texture_under = ExtResource( 7 )
texture_progress = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StateLabel" type="Label" parent="."]
margin_left = -38.8869
margin_top = -53.0068
margin_right = 1.11314
margin_bottom = -39.0068
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Melee"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.0196867, 0 )
frames = SubResource( 1 )
animation = "idle"
frame = 1
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.629435, 0.25587 )
shape = SubResource( 2 )

[node name="DespawnTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="MeleeRayCast" type="RayCast2D" parent="."]
position = Vector2( 0, 6.935 )
enabled = true
cast_to = Vector2( 45, 0 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 45.3652, 3.5946 )

[node name="StaRegen" type="Timer" parent="."]
autostart = true

[node name="Label2" type="Label" parent="."]
visible = false
margin_left = 20.306
margin_top = -52.5498
margin_right = 37.306
margin_bottom = -38.5498
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "10"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="JumpTimer" type="Timer" parent="."]
one_shot = true

[node name="RayCast2D" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 0, 32 )

[node name="WallRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( -20, 0 )

[node name="FrontWallRaycast" type="RayCast2D" parent="."]
enabled = true
cast_to = Vector2( 20, 0 )

[node name="MinionTimer" type="Timer" parent="."]
wait_time = 3.0
autostart = true

[node name="MinionSpawn" type="Position2D" parent="."]
position = Vector2( 36, -21 )
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_animation_finished"]
[connection signal="timeout" from="DespawnTimer" to="." method="_on_Despawn_timeout"]
[connection signal="timeout" from="StaRegen" to="." method="_on_StaRegen_timeout"]
[connection signal="timeout" from="JumpTimer" to="." method="_on_JumpTimer_timeout"]
[connection signal="timeout" from="MinionTimer" to="." method="_on_MinionTimer_timeout"]
